--- a/best-seller.html
+++ b/best-seller.html
@@ -142,9 +142,9 @@
         </div>
     </div>
     <!-- Page Preloder -->
-    <!-- <div id="preloder">
+    <div id="preloder">
         <div class="loader"></div>
-    </div> -->
+    </div>
     <!-- Header Section Begin -->
     <header class="header mx-3 px-3 hide-in-responsive">
         <div class="container">
@@ -895,7 +895,7 @@
                 prePrice: '799.000',
                 title: 'Áo thun nam dáng ôm',
                 discount: 50,
-                imgUrl: 'img/nam/6.png'
+                imgUrl: 'img/nam/aophong/6.webp'
             },
             {
                 price: '149.500 đ',
