--- a/female.html
+++ b/female.html
@@ -215,9 +215,9 @@
     </div>
     <!-- modal end -->
     <!-- Page Preloder -->
-    <!-- <div id="preloder">
+    <div id="preloder">
         <div class="loader"></div>
-    </div> -->
+    </div>
     <!-- Header Section Begin -->
     <header class="header mx-3 px-3 hide-in-responsive">
         <div class="container">
@@ -436,23 +436,29 @@
         <div class="container">
             <div class="d-flex mb-4 justify-content-center flex-wrap">
                <div class="clothes-type">
-                    <a href="category.html"><img src="./img/clothes-type/simicategory_filename_tablet1698394465.webp"/></a>
+                    <a href="./category.html?type=aophong&gender=nu"><img src="./img/clothes-type/simicategory_filename_tablet1698394465.webp"/></a>
                     <h5 class="text-center">Áo phông</h5>
                 </div>
                 <div class="clothes-type">
-                    <img src="./img/clothes-type/simicategory_filename_tablet1698394512.webp"/>
+                    <a href="./category.html?type=aodaitay&gender=nu"><img src="./img/clothes-type/simicategory_filename_tablet1698394512.webp"/></a>
                     <h5 class="text-center">Áo dài tay</h5>
                 </div>
                 <div class="clothes-type">
-                    <img src="./img/clothes-type/simicategory_filename_tablet1702457455.webp"/>
+                    <a href="./category.html?type=aokhoac&gender=nu">
+                        <img src="./img/clothes-type/simicategory_filename_tablet1702457455.webp"/>
+                    </a>
                     <h5 class="text-center">Áo khoác</h5>
                 </div>
                 <div class="clothes-type">
-                    <img src="./img/clothes-type/simicategory_filename_tablet1698394609.webp"/>
+                    <a href="./category.html?type=quandai&gender=nu">
+                        <img src="./img/clothes-type/simicategory_filename_tablet1698394609.webp"/>
+                    </a>
                     <h5 class="text-center">Quần</h5>
                 </div>
                 <div class="clothes-type">
-                    <img src="./img/clothes-type/simicategory_filename_tablet1698394634.webp"/>
+                    <a href="./category.html?type=vay&gender=nu">
+                        <img src="./img/clothes-type/simicategory_filename_tablet1698394634.webp"/>
+                    </a>
                     <h5 class="text-center">Váy</h5>
                 </div>
             </div>
