--- a/male.html
+++ b/male.html
@@ -142,9 +142,9 @@
         </div>
     </div>
     <!-- Page Preloder -->
-    <!-- <div id="preloder">
+    <div id="preloder">
         <div class="loader"></div>
-    </div> -->
+    </div>
     <!-- Header Section Begin -->
     <header class="header mx-3 px-3 hide-in-responsive">
         <div class="container">
@@ -363,24 +363,34 @@
         <div class="container">
             <div class="d-flex mb-4 justify-content-center flex-wrap">
                <div class="clothes-type">
-                    <img src="./img/clothes-type/simicategory_filename_tablet1698394465.webp"/>
+                    <a href="./category.html?type=aophong&gender=nam">
+                        <img src="./img/clothes-type/simicategory_filename_tablet1698394465.webp"/>
+                    </a>
                     <h5 class="text-center">Áo phông</h5>
                 </div>
                 <div class="clothes-type">
-                    <img src="./img/clothes-type/simicategory_filename_tablet1698394512.webp"/>
+                    <a href="./category.html?type=aodai&gender=nam">
+                        <img src="./img/clothes-type/simicategory_filename_tablet1698394512.webp"/>
+                    </a>
                     <h5 class="text-center">Áo dài tay</h5>
                 </div>
                 <div class="clothes-type">
-                    <img src="./img/clothes-type/simicategory_filename_tablet1702457455.webp"/>
+                    <a href="./category.html?type=aokhoac&gender=nam">
+                        <img src="./img/clothes-type/simicategory_filename_tablet1702457455.webp"/>
+                    </a>
                     <h5 class="text-center">Áo khoác</h5>
                 </div>
                 <div class="clothes-type">
-                    <img src="./img/clothes-type/simicategory_filename_tablet1698394609.webp"/>
+                    <a href="./category.html?type=quandai&gender=nam">
+                        <img src="./img/clothes-type/simicategory_filename_tablet1698394609.webp"/>
+                    </a>
                     <h5 class="text-center">Quần</h5>
                 </div>
                 <div class="clothes-type">
-                    <img src="./img/clothes-type/simicategory_filename_tablet1698394386.webp"/>
-                    <h5 class="text-center">Quần lót</h5>
+                    <a href="./category.html?type=quandui&gender=nam">
+                        <img src="./img/clothes-type/simicategory_filename_tablet1698394386.webp"/>
+                    </a>
+                    <h5 class="text-center">Quần đùi</h5>
                 </div>
             </div>
             <div class="row">
