--- a/product-details.html
+++ b/product-details.html
@@ -27,9 +27,9 @@
 
 <body style="position: relative;">
     <!-- Page Preloder -->
-    <!-- <div id="preloder">
+    <div id="preloder">
         <div class="loader"></div>
-    </div> -->
+    </div>
     <!-- Header Section Begin -->
     <header class="header mx-3 px-3 hide-in-responsive">
         <div class="container">
