--- a/checkout.html
+++ b/checkout.html
@@ -377,6 +377,11 @@
                                             </span>
                                         </div>
                                     </div>
+                                    <div class="col-12 show-in-responsive">
+                                        <form action="" class="custom-form mx-2 mt-5"  onsubmit="checkoutFormSubmit()">
+                                            <button type="submit" class="col btn btn-danger text-center font-weight-bold mt-4">THANH TOÁN</button>
+                                        </form>`
+                                    </div>
                                 </div>
                             </form>
                         </div>
