--- a/category.html
+++ b/category.html
@@ -483,8 +483,8 @@
                                     <div class="card-body">
                                         <div class="shop__sidebar__tags">
                                             <div class="display">
-                                                <span id="min">10</span>
-                                                <span id="max">100</span>
+                                                <span id="min">0đ</span>
+                                                <span id="max">1.000.000đ</span>
                                               </div>
                                             <div class="range-slide">
                                                 <div class="slide">
@@ -500,7 +500,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row justify-content-center hide-in-responsive d-flex">
+                            <div class="row justify-content-center hide-in-responsive-flex">
                                 <button type="button" class="px-3 py-2 mr-2" style="background-color: white; color: black;">Khôi phục</button>
                                 <button type="button" class="px-3 py-2" style="background-color: black; color: white;">Áp dụng</button>
                             </div>
