--- a/checkout.html
+++ b/checkout.html
@@ -43,7 +43,7 @@
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li><a href="./best-seller.html">Sản phẩm bán chạy</a></li>
-                            <li class=""><a href="./favourite.html">Nữ</a></li>
+                            <li class=""><a href="./female.html">Nữ</a></li>
                             <li><a href="./male.html">Nam</a></li>
                             <li><a href="./news.html">Tin tức</a></li>
                             <li><a href="./introduce.html">Giới thiệu</a></li>
@@ -530,6 +530,7 @@
 
     <script>
         let totalPrice = [];
+        var timeout = 10;
         onReloadCheckout();
         function onReloadCheckout(){
             let data = JSON.parse(localStorage.getItem('cartData'));
@@ -561,7 +562,7 @@
             content += `<div class="price">
                     <div class="d-flex justify-content-between mt-3">
                         <span><strong>Giá</strong></span>
-                        <span>549.000 <span style="text-decoration: underline;">đ</span></span>
+                        <span><span id="total">549.000</span></span>
                     </div>
                     <div class="d-flex justify-content-between mt-3">
                         <span><strong>Khuyến mãi</strong></span>
@@ -576,14 +577,16 @@
                     </div>
                     <div class="d-flex justify-content-between mt-3">
                         <span><strong>Tổng tiền</strong></span>
-                        <span><strong>449.000 <span style="text-decoration: underline;">đ</span></strong></span>
+                        <span><strong id="totalAmount">449.000</strong></span>
                     </div>
                 </div>
                 <form action="" class="custom-form mx-2 mt-5"  onsubmit="checkoutFormSubmit()">
                     <button type="submit" class="col btn btn-danger text-center font-weight-bold mt-4">THANH TOÁN</button>
                 </form>`;
             document.getElementById("checkout-product-list").innerHTML = content;
-            recalculateTotal()
+            setTimeout(() => {
+                recalculateTotal();
+            }, 300);
         }
         function checkoutFormSubmit() {
             event.preventDefault()
@@ -617,13 +620,13 @@
                         <div class="mt-3 border-bottom">
                             <div class="d-flex justify-content-between mt-3 mb-4">
                                 <span>Mã đơn hàng</span>
-                                <span><strong>499.000 <span style="text-decoration: underline;">đ</span></strong></span>
+                                <span><strong>13874</span></strong></span>
                             </div>
                         </div>
                         <div class="mt-3 border-bottom">
                             <div class="d-flex justify-content-between mt-3 mb-4">
                                 <span>Số tiền</span>
-                                <span class="text-danger"><strong>499.000 <span style="text-decoration: underline;">đ</span></strong></span>
+                                <span class="text-danger"><strong id="totalAmountA">499.000</strong></span>
                             </div>
                         </div>
                         <div class="mt-3 border-bottom">
@@ -661,13 +664,13 @@
                         <div class="mt-3 border-top">
                             <div class="d-flex justify-content-between mt-3 mb-4">
                                 <span>Mã đơn hàng</span>
-                                <span><strong>499.000 <span style="text-decoration: underline;">đ</span></strong></span>
+                                <span><strong>13478</strong></span>
                             </div>
                         </div>
                         <div class="mt-3">
                             <div class="d-flex justify-content-between mt-3 mb-4">
                                 <span>Số tiền</span>
-                                <span class="text-danger"><strong>499.000 <span style="text-decoration: underline;">đ</span></strong></span>
+                                <span class="text-danger"><strong id="totalAmountB">499.000</strong></span>
                             </div>
                         </div>
                         <div class="mt-3">
@@ -690,6 +693,9 @@
                         <a href="./index.html" class="col btn btn-dark text-center">TIẾP TỤC MUA SẮM</a>
                     </div>
                 </div>`
+                var totalAmount = (totalPrice.reduce((a, b) => a + b, 0) - 100000).toLocaleString('vi', {style : 'currency', currency : 'VND'});
+                document.getElementById("totalAmountA").innerHTML = totalAmount;
+                document.getElementById("totalAmountB").innerHTML = totalAmount;
             }else {
                 checkoutContainter.innerHTML = `<div id="checkout-qr" class="">
                     <div class="card border-0 shadow rounded">
@@ -702,11 +708,11 @@
                                     <div class="d-flex justify-content-end align-self-center text-right">
                                         <span class="my-auto">Thời gian hết hạn sau</span>
                                         <div class="bg-dark ml-2 p-2 rounded" >
-                                            <span class="text-light p-auto">09</span>
+                                            <span class="text-light p-auto">00</span>
                                         </div>
                                         <span class="ml-2 my-auto">:</span>
                                         <div class="bg-dark ml-2 p-2 rounded" >
-                                            <span class="text-light p-auto">59</span>
+                                            <span id="timeoutCheckout" class="text-light p-auto">10</span>
                                         </div>
                                     </div>
                                 </div>
@@ -725,13 +731,13 @@
                                         </div>
                                         <div class="card-body bg-light pb-5">
                                             <p class="mb-2">Số tiền thanh toán</p>
-                                            <h3 class="mb-2"><strong>499.000 <span style="text-decoration: underline;">đ</span></strong></h3>
+                                            <h3 class="mb-2"><strong id="totalAmountC">499.000</strong></h3>
                                             <p class="mb-2">Giá trị đơn hàng</p>
-                                            <p class="mb-2"><strong>499.000 <span style="text-decoration: underline;">đ</span></strong></p>
+                                            <p class="mb-2"><strong id="totalAmountD">499.000</strong></p>
                                             <p class="mb-2">Phí giao dịch</p>
                                             <p class="mb-2"><strong>0 đ</strong></p>
                                             <p class="mb-2"><strong>Mã đơn hàng</strong></p>
-                                            <p class="mb-2"><strong>0198743</strong></p>
+                                            <p class="mb-2"><strong>13478</strong></p>
                                             <p class="mb-2">Nhà cung cấp</p>
                                             <p class="mb-2"><strong>Công ty TNHH Scarlet</strong></p>
                                         </div>
@@ -751,8 +757,29 @@
                         </div>
                     </div>
                 </div>`
+                setInterval(() => {
+                    timeoutCheckout();
+                }, 900);
+                var totalAmount = (totalPrice.reduce((a, b) => a + b, 0) - 100000).toLocaleString('vi', {style : 'currency', currency : 'VND'});
+                document.getElementById("totalAmountC").innerHTML = totalAmount;
+                document.getElementById("totalAmountD").innerHTML = totalAmount;
             }
-
+        }
+        function timeoutCheckout(){
+            document.getElementById("timeoutCheckout").innerHTML = timeout < 10 ? ('0' + timeout) : timeout;
+            timeout -= 1;
+            if(timeout == 0){
+                location.href = './checkout-fail.html';
+                clearInterval();
+            }
+        }
+        function recalculateTotal(){
+            var total = totalPrice.reduce((a, b) => a + b, 0).toLocaleString('vi', {style : 'currency', currency : 'VND'});
+            var totalAmount = (totalPrice.reduce((a, b) => a + b, 0) - 100000).toLocaleString('vi', {style : 'currency', currency : 'VND'});
+            document.getElementById("total").innerHTML = total;
+            document.getElementById("totalAmount").innerHTML = totalAmount;
+            let data = JSON.parse(localStorage.getItem('cartData'));
+            document.getElementById("quantity").innerHTML = totalPrice?.length;
         }
         function checkValidate() {
             const current = event.target
