--- a/product-details.html
+++ b/product-details.html
@@ -397,12 +397,16 @@
                                         </div>
                                         <div class="col-lg-12 col-md-12 mt-2">
                                             <div class="shop__sidebar__color hide-in-responsive">
-                                                <label class="c-11" for="sp-11">
-                                                    <input type="radio" id="sp-11">
-                                                </label>
-                                                <label class="c-10" for="sp-10">
-                                                    <input type="radio" id="sp-10">
-                                                </label>
+                                                <div class="outside-color prd-details">
+                                                    <label class="c-11" for="sp-11">
+                                                        <input type="radio" id="sp-11">
+                                                    </label>
+                                                </div>
+                                                <div class="outside-color prd-details">
+                                                    <label class="c-10" for="sp-10">
+                                                        <input type="radio" id="sp-10">
+                                                    </label>
+                                                </div>
                                             </div>
                                             <div class="shop__sidebar__color show-in-responsive">
                                                 <div style="display: inline-block;
