--- a/admin-employee-add.html
+++ b/admin-employee-add.html
@@ -124,6 +124,16 @@
                                 <div class="row">
                                     <div class="col-lg-3 col-md-3 text-center my-auto">
                                         <img class="" src="./img/icon/user.png" alt="" style="width: 148px; height: 148px;">
+                                        <div class="mt-2 px-5 text-center">
+                                            <select
+                                                id="status"
+                                                name="status"
+                                                class="form-control font-weight-bold text-center border-top-0 border-right-0 border-left-0 border-bottom text-success"
+                                            >
+                                                <option class="text-success" value="1">Đang hoạt động</option>
+                                                <option class="text-danger" value="2">Ngưng hoạt động</option>
+                                            </select>
+                                        </div>
                                     </div>
                                     <div class="col-lg-9 col-md-9">
                                         <div class="row">
@@ -228,6 +238,16 @@
             //     $('nav.sidebar').height( window.innerHeight - $('nav.navbar').height())
             //     $('main').height( window.innerHeight - $('nav.navbar').height() - 16)
             // });
+        });
+        $('#status').on('change', function (e) {
+            var valueSelected = this.value;
+            if (valueSelected == 1) {
+                $(this).removeClass('text-danger');
+                $(this).addClass('text-success');
+            } else {
+                $(this).removeClass('text-success');
+                $(this).addClass('text-danger');
+            }
         });
 
     </script>
