--- a/admin-index.html
+++ b/admin-index.html
@@ -228,7 +228,7 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col-lg-6 col-md-6">
-                        <div class="bg-white p-4">
+                        <div class="bg-white p-4 h-100">
                             <h5 class="font-weight-bold">Giao dịch gần đây</h5>
                             <table class="table">
                                 <thead>
@@ -270,40 +270,47 @@
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="bg-white p-4">
-                            <h5 class="font-weight-bold">Giao dịch gần đây</h5>
+                            <h5 class="font-weight-bold">Sản phậm bán chạy</h5>
                             <table class="table">
                                 <thead>
                                     <tr class="border-bottom">
-                                        <th class="border-0" scope="col">Mã đơn hàng</th>
-                                        <th class="border-0" scope="col">Ngày</th>
-                                        <th class="border-0" scope="col">Tổng tiền</th>
-                                        <th class="border-0" scope="col">Trạng thái</th>
+                                        <th class="border-0" scope="col">Tên sản phẩm</th>
+                                        <th class="border-0" scope="col">Giá</th>
+                                        <th class="border-0" scope="col">Lượt bán</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr class="border-bottom">
-                                        <th class="font-weight-normal">033445</th>
-                                        <td>12/03/2024</td>
-                                        <td>1,090,000đ</td>
-                                        <td class="">Đang giao</td>
+                                        <th class="font-weight-normal">
+                                            <img class="" src="img/nu/aophong/aophong1/4.webp" alt="" style="max-height: 50px;">
+                                            Áo phông nữ cotton dáng ngắn in chữ
+                                        </th>
+                                        <td>149,500đ</td>
+                                        <td>322</td>
                                     </tr>
                                     <tr class="border-bottom">
-                                        <th class="font-weight-normal">099334</th>
-                                        <td>12/03/2024</td>
-                                        <td>1,090,000đ</td>
-                                        <td class="text-success">Hoàn thành</td>
+                                        <th class="font-weight-normal">
+                                            <img class="" src="/img/nu/4.jpg" alt="" style="max-height: 50px;">
+                                            Váy liền nữ phối tay
+                                        </th>
+                                        <td>449,500đ</td>
+                                        <td>298</td>
                                     </tr>
                                     <tr class="border-bottom">
-                                        <th class="font-weight-normal">033455</th>
-                                        <td>10/03/2024</td>
-                                        <td>1,990,000đ</td>
-                                        <td class="text-success">Hoàn thành</td>
+                                        <th class="font-weight-normal">
+                                            <img class="" src="img/nam/1.jpg" alt="" style="max-height: 50px;">
+                                            Quần khaki nam dáng ôm
+                                        </th>
+                                        <td>299,000đ</td>
+                                        <td>266</td>
                                     </tr>
                                     <tr class="">
-                                        <th class="font-weight-normal">334545</th>
-                                        <td>10/03/2024</td>
-                                        <td>590,000đ</td>
-                                        <td class="text-danger">Hoàn trả</td>
+                                        <th class="font-weight-normal">
+                                            <img class="" src="img/nam/5.jpg" alt="" style="max-height: 50px;">
+                                            Áo khoác chần bông nam
+                                        </th>
+                                        <td>299,000đ</td>
+                                        <td>211</td>
                                     </tr>
                                 </tbody>
                             </table>
