--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-1 col-md-1">
-                    <div class="header__logo text-center" style="height: fit-content;">
-                        <a href="./index.html" style="height: fit-content;"><img src="img/logo/logonew-03.jpg" alt="" style="object-fit: cover; height: 100%;"></a>
+                    <div class="header__logo text-center" style="height: 100px;">
+                        <a href="./index.html" style="height: 100%;"><img src="img/logo/logonew-06.png" alt="" style="object-fit: cover; height: 100%;"></a>
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-5">
@@ -557,7 +557,7 @@
                     </div>
                     <div class="col-12 pt-3 pb-5">
                         <h3 class="text-center">
-                            <a href="./best-seller.html" style="color: red; background-color: white; border: 2px solid red; font-size: 14px; padding: 10px 20px;"><strong>Xem thêm</strong></a>
+                            <a href="./best-seller.html" style="color: black; background-color: white; border: 2px solid rgb(106, 105, 105); font-size: 14px; padding: 10px 20px;"><strong>Xem thêm</strong></a>
                         </h3>
                     </div>
                 </div>
@@ -930,7 +930,7 @@
                     </div>
                     <div class="col-12 pt-3 pb-5">
                         <h3 class="text-center">
-                            <a href="./new-products.html" style="color: red; background-color: white; border: 2px solid red; font-size: 14px; padding: 10px 20px;"><strong>Xem thêm</strong></a>
+                            <a href="./new-products.html" style="color: black; background-color: white; border: 2px solid rgb(102, 102, 102); font-size: 14px; padding: 10px 20px;"><strong>Xem thêm</strong></a>
                         </h3>
                     </div>
                 </div>
