--- a/product-details.html
+++ b/product-details.html
@@ -250,8 +250,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="">
-                                <a href="./index.html">Trang phục</a>
+                            <div>
+                                <a href="./index.html">Trang chủ</a>
                                 <a href="./shop.html">Nữ</a>
                                 <a href="./shop.html">Áo phông</a>
                                 <span class="current-page">Áo phông nữ cotton dáng ngắn in chữ</span>
@@ -260,7 +260,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product__details__pic prdDetailImg" style="background-color: unset;">
+            <div class="product__details__pic prdDetailImg" style="background-color: unset; padding-bottom: 0px;">
                 <div class="container">
                     <div id="carouselExampleIndicators" class="carousel slide show-in-responsive mb-4" data-ride="carousel">
                         <ol class="carousel-indicators" style="bottom: -30px !important;">
@@ -453,7 +453,7 @@
                                         <div class="col-lg-12 col-md-12 mt-2 show-in-responsive">
                                             <span>Số lượng: </span>
                                         </div>
-                                        <div class="col-lg-4 col-md-4 col-sm-12 my-2 pr-2 mb-4 show-in-responsive">
+                                        <div class="col-lg-4 col-md-4 col-sm-4 my-2 pr-2 mb-4 show-in-responsive">
                                             <div class="number-input" style="border: 1px solid #ddd;">
                                                 <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus" style="width: 50px !important;">-</button>
                                                 <input class="quantity" min="0" name="quantity" value="1" type="number" style="border: none; padding: 15px 20px;">
@@ -461,19 +461,25 @@
                                             </div>
                                         </div>
                                         <div class="col-lg-12 col-md-12 mt-2 hide-in-responsive">
-                                            <p class="text-primary"><i>Miễn phí giao hàng</i></p>
+                                            <p style="color: black; margin-bottom: 5px;"><i>Miễn phí giao hàng</i></p>
                                         </div>
-                                        <div class="col-lg-12 col-md-12">
-                                            <button type="button" class="btn btn-red btn-block py-2" onclick="showToast()"><i class="fa fa-heart" style="font-size: 20px;"></i> Thêm yêu thích</button>
-                                        </div>
-                                        <div class="col-lg-4 col-md-4 col-sm-12 my-2 pr-2 mt-2 hide-in-responsive">
+                                        <!-- <div class="col-lg-12 col-md-12">
+                                            <button type="button" class="btn btn-red btn-block py-2" onclick="showToast()"><i class="fa fa-heart" style="font-size: 20px;"></i></button>
+                                        </div> -->
+                                        <div class="col-lg-4 col-md-4 col-sm-4 my-2 pr-2 mt-2 hide-in-responsive">
                                             <div class="number-input" style="border: 1px solid #ddd;">
                                                 <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" class="minus">-</button>
                                                 <input class="quantity" min="0" name="quantity" value="1" type="number" style="border: none">
                                                 <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus">+</button>
                                             </div>
+                                        </div> 
+                                        <div class="col-8 d-flex align-items-center justify-content-end hide-in-responsive-flex">
+                                            <button type="button" class="btn py-2" onclick="showToast()"><i class="fa fa-heart-o" style="font-size: 20px; border: 1px solid #aeaeae; border-radius: 50px; padding: 12px 12px 10px 12px;" aria-hidden="true"></i></button>
                                         </div>
-                                        <div class="col-lg-8 col-md-8 col-sm-12 my-2 pl-2 mt-2">
+                                        <div class="col-8 text-right show-in-responsive">
+                                            <button type="button" class="btn py-2" onclick="showToast()"><i class="fa fa-heart-o" style="font-size: 40px; border: 1px solid #aeaeae; border-radius: 50px; padding: 12px 12px 10px 12px;" aria-hidden="true"></i></button>
+                                        </div>
+                                        <div class="col-lg-12 col-md-12 col-sm-12 my-2 mt-2">
                                             <button type="button" class="btn border btn-block py-2 bg-white" data-toggle="modal" data-target="#exampleModalCenter">
                                                 <i class="fa fa-cart-plus" style="font-size: 20px;"></i> Thêm vào giỏ hàng
                                             </button>
@@ -498,7 +504,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
                 </div>
             </div>
 
