--- a/account.html
+++ b/account.html
@@ -317,7 +317,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="">
-                            <a href="./index.html">Trang phục</a>
+                            <a href="./index.html">Trang chủ</a>
                             <a href="./shop.html">Tài khoản</a>
                             <span class="current-page">Thông tin tài khoản</span>
                         </div>
