--- a/admin-index.html
+++ b/admin-index.html
@@ -108,7 +108,7 @@
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4 bg-light">
                 <h3 id="page-title" class="font-weight-bold">Tổng quan</h2>
-                <div class="row mt-3">
+                <div class="row mt-3 admin-dashboard">
                     <div class="col-lg-3 col-md-3">
                         <div class="card bg-white rounded border-0">
                             <div class="card-body">
