--- a/checkout.html
+++ b/checkout.html
@@ -242,7 +242,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="">
-                                <a href="./index.html">Trang phục</a>
+                                <a href="./index.html">Trang chủ</a>
                                 <span class="current-page">Thanh toán</span>
                             </div>
                         </div>
