--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -251,7 +251,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="">
-                            <a href="./index.html">Trang phục</a>
+                            <a href="./index.html">Trang chủ</a>
                             <span class="current-page">Giỏ hàng</span>
                         </div>
                     </div>
