--- a/new-products.html
+++ b/new-products.html
@@ -828,7 +828,7 @@
                 imgUrl: 'img/nu/13.jpg'
             },
             {
-                price: '449.500',
+                price: '449.500 đ',
                 prePrice: '699.000',
                 title: 'Váy liền nữ interlock cổ bẻ dáng dài',
                 discount: 50,
@@ -856,7 +856,7 @@
                 imgUrl: 'img/nam/5.jpg'
             },
             {
-                price: '449.500',
+                price: '449.500 đ',
                 prePrice: '699.000',
                 title: 'Áo hoodie nam dày dặn',
                 discount: 50,
@@ -874,10 +874,10 @@
                 prePrice: '799.000',
                 title: 'Áo thun nam dáng ôm',
                 discount: 50,
-                imgUrl: 'img/nam/9.png'
+                imgUrl: 'img/nam/aophong/4.webp'
             },
             {
-                price: '449.500',
+                price: '449.500 đ',
                 prePrice: '699.000',
                 title: 'Váy liền nữ interlock cổ bẻ dáng dài',
                 discount: 50,
@@ -917,7 +917,7 @@
                 <div class="product__item__text">
                     <h6>${item?.title}</h6>
                     <a href="#" class="add-cart">+ Thêm giỏ hàng</a>
-                    <h6>${item?.price} đ</h6>
+                    <h6>${item?.price}</h6>
                     <h6><del>${item?.prePrice} đ</del>   <strong class="text-danger"> -${item?.discount}%</strong></h6> 
                     <div class="product__color__select">
                         <label for="pc-4">
